chapter8/enforce-memory-request/yaml/gatekeeper-policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireMemoryRequests
metadata:
  name: require-memory-requests
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
